Added graphical user interface

--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry including="io/|io/FileOperation.java|main/|main/Main.java|main/Table.java" kind="src" path="src"/>
+	<classpathentry including="gui/|io/|io/FileOperation.java|main/|main/Main.java|main/Table.java" kind="src" path="src"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
